// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Rendering renders the UI snapshot correctly 1`] = `
<nav
  aria-label="Pagination"
  className="css-1xdhyk6"
  data-testid="ds-pagination"
  id="firstPage"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    data-testid="ds-list"
  >
    <li>
      <a
        aria-disabled={true}
        aria-label="Previous page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=0"
        rel={null}
        target={null}
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1hiwo6q"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-s2ejzr"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <span
          className="css-rb3ek3"
        >
          Previous
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        aria-label="Page 1"
        className="chakra-link css-1oyhq6a"
        data-testid="ds-link"
        href="page=1"
        rel={null}
        target={null}
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-label="Page 2"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=2"
        rel={null}
        target={null}
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-label="Page 3"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=3"
        rel={null}
        target={null}
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-label="Page 4"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=4"
        rel={null}
        target={null}
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-label="Page 5"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=5"
        rel={null}
        target={null}
      >
        5
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-label="Page 10"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=10"
        rel={null}
        target={null}
      >
        10
      </a>
    </li>
    <li>
      <a
        aria-disabled={false}
        aria-label="Next page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=2"
        rel={null}
        target={null}
      >
        <span
          className="css-70cl0f"
        >
          Next
        </span>
        <svg
          aria-hidden={true}
          className="chakra-icon css-16chr5f"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-1lhtxwf"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Pagination Rendering renders the UI snapshot correctly 2`] = `
<nav
  aria-label="Pagination"
  className="css-1xdhyk6"
  data-testid="ds-pagination"
  id="lastPage"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    data-testid="ds-list"
  >
    <li>
      <a
        aria-disabled={false}
        aria-label="Previous page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=9"
        rel={null}
        target={null}
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1hiwo6q"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-s2ejzr"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <span
          className="css-rb3ek3"
        >
          Previous
        </span>
      </a>
    </li>
    <li>
      <a
        aria-label="Page 1"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=1"
        rel={null}
        target={null}
      >
        1
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-label="Page 6"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=6"
        rel={null}
        target={null}
      >
        6
      </a>
    </li>
    <li>
      <a
        aria-label="Page 7"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=7"
        rel={null}
        target={null}
      >
        7
      </a>
    </li>
    <li>
      <a
        aria-label="Page 8"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=8"
        rel={null}
        target={null}
      >
        8
      </a>
    </li>
    <li>
      <a
        aria-label="Page 9"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=9"
        rel={null}
        target={null}
      >
        9
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        aria-label="Page 10"
        className="chakra-link css-1oyhq6a"
        data-testid="ds-link"
        href="page=10"
        rel={null}
        target={null}
      >
        10
      </a>
    </li>
    <li>
      <a
        aria-disabled={true}
        aria-label="Next page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=11"
        rel={null}
        target={null}
      >
        <span
          className="css-70cl0f"
        >
          Next
        </span>
        <svg
          aria-hidden={true}
          className="chakra-icon css-16chr5f"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-1lhtxwf"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Pagination Rendering renders the UI snapshot correctly 3`] = `
<nav
  aria-label="Pagination"
  className="css-1xdhyk6"
  data-testid="ds-pagination"
  id="middlePage"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    data-testid="ds-list"
  >
    <li>
      <a
        aria-disabled={false}
        aria-label="Previous page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=4"
        rel={null}
        target={null}
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1hiwo6q"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-s2ejzr"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <span
          className="css-rb3ek3"
        >
          Previous
        </span>
      </a>
    </li>
    <li>
      <a
        aria-label="Page 1"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=1"
        rel={null}
        target={null}
      >
        1
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-label="Page 4"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=4"
        rel={null}
        target={null}
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        aria-label="Page 5"
        className="chakra-link css-1oyhq6a"
        data-testid="ds-link"
        href="page=5"
        rel={null}
        target={null}
      >
        5
      </a>
    </li>
    <li>
      <a
        aria-label="Page 6"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=6"
        rel={null}
        target={null}
      >
        6
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-label="Page 10"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=10"
        rel={null}
        target={null}
      >
        10
      </a>
    </li>
    <li>
      <a
        aria-disabled={false}
        aria-label="Next page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=6"
        rel={null}
        target={null}
      >
        <span
          className="css-70cl0f"
        >
          Next
        </span>
        <svg
          aria-hidden={true}
          className="chakra-icon css-16chr5f"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-1lhtxwf"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Pagination Rendering renders the UI snapshot correctly 4`] = `
<nav
  aria-label="Pagination"
  className="css-kle7zy"
  data-testid="ds-pagination"
  id="chakra"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    data-testid="ds-list"
  >
    <li>
      <a
        aria-disabled={true}
        aria-label="Previous page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=0"
        rel={null}
        target={null}
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1hiwo6q"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-s2ejzr"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <span
          className="css-rb3ek3"
        >
          Previous
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        aria-label="Page 1"
        className="chakra-link css-1oyhq6a"
        data-testid="ds-link"
        href="page=1"
        rel={null}
        target={null}
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-label="Page 2"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=2"
        rel={null}
        target={null}
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-label="Page 3"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=3"
        rel={null}
        target={null}
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-label="Page 4"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=4"
        rel={null}
        target={null}
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-label="Page 5"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=5"
        rel={null}
        target={null}
      >
        5
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-label="Page 10"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=10"
        rel={null}
        target={null}
      >
        10
      </a>
    </li>
    <li>
      <a
        aria-disabled={false}
        aria-label="Next page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=2"
        rel={null}
        target={null}
      >
        <span
          className="css-70cl0f"
        >
          Next
        </span>
        <svg
          aria-hidden={true}
          className="chakra-icon css-16chr5f"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-1lhtxwf"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Pagination Rendering renders the UI snapshot correctly 5`] = `
<nav
  aria-label="Pagination"
  className="css-1xdhyk6"
  data-testid="props"
  id="props"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    data-testid="ds-list"
  >
    <li>
      <a
        aria-disabled={true}
        aria-label="Previous page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=0"
        rel={null}
        target={null}
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1hiwo6q"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-s2ejzr"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <span
          className="css-rb3ek3"
        >
          Previous
        </span>
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        aria-label="Page 1"
        className="chakra-link css-1oyhq6a"
        data-testid="ds-link"
        href="page=1"
        rel={null}
        target={null}
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-label="Page 2"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=2"
        rel={null}
        target={null}
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-label="Page 3"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=3"
        rel={null}
        target={null}
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-label="Page 4"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=4"
        rel={null}
        target={null}
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-label="Page 5"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=5"
        rel={null}
        target={null}
      >
        5
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-label="Page 10"
        className="chakra-link css-10hitgp"
        data-testid="ds-link"
        href="page=10"
        rel={null}
        target={null}
      >
        10
      </a>
    </li>
    <li>
      <a
        aria-disabled={false}
        aria-label="Next page"
        className="chakra-link css-1xdhyk6"
        data-testid="ds-link"
        href="page=2"
        rel={null}
        target={null}
      >
        <span
          className="css-70cl0f"
        >
          Next
        </span>
        <svg
          aria-hidden={true}
          className="chakra-icon css-16chr5f"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
        <svg
          aria-hidden={true}
          className="chakra-icon css-1lhtxwf"
          data-file-name="SvgArrow"
          focusable={false}
          role="img"
          title="arrow icon"
        />
      </a>
    </li>
  </ul>
</nav>
`;
